--- a/android/build.gradle
+++ b/android/build.gradle
@@ -111,6 +111,8 @@ dependencies {
   //noinspection GradleDynamicVersion
   implementation "com.facebook.react:react-native:+"
   implementation "org.jetbrains.kotlin:kotlin-stdlib:$kotlin_version"
+
+  implementation "org.matrix.rustcomponents:sdk-android:0.2.24"
 }
 
 if (isNewArchitectureEnabled()) {
