docs: implement SSO login / logout in example app

--- a/example/android/app/build.gradle
+++ b/example/android/app/build.gradle
@@ -81,6 +81,9 @@ android {
         targetSdkVersion rootProject.ext.targetSdkVersion
         versionCode 1
         versionName "1.0"
+        manifestPlaceholders = [
+          appAuthRedirectScheme: 'unomed.example.auth'
+        ]
     }
     signingConfigs {
         debug {
