--- a/example/package.json
+++ b/example/package.json
@@ -10,9 +10,14 @@
     "build:ios": "cd ios && xcodebuild -workspace MatrixSdkExample.xcworkspace -scheme MatrixSdkExample -configuration Debug -sdk iphonesimulator CC=clang CPLUSPLUS=clang++ LD=clang LDPLUSPLUS=clang++ GCC_OPTIMIZATION_LEVEL=0 GCC_PRECOMPILE_PREFIX_HEADER=YES ASSETCATALOG_COMPILER_OPTIMIZATION=time DEBUG_INFORMATION_FORMAT=dwarf COMPILER_INDEX_STORE_ENABLE=NO"
   },
   "dependencies": {
+    "@react-native-async-storage/async-storage": "^2.0.0",
+    "@types/uuid": "^10.0.0",
     "react": "18.2.0",
     "react-native": "0.74.2",
-    "react-native-inappbrowser-reborn": "^3.7.0"
+    "react-native-async-storage": "^0.0.1",
+    "react-native-get-random-values": "^1.11.0",
+    "react-native-inappbrowser-reborn": "^3.7.0",
+    "uuid": "^10.0.0"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
