feat: update to current develop branch of matrix-rust-sdk

--- a/android/build.gradle
+++ b/android/build.gradle
@@ -114,11 +114,11 @@ dependencies {
 
   // Use locally built FFI bindings if available and fall back to pre-built remote bindings otherwise
   if (file("libs").listFiles().findAll { it.name.endsWith('.aar') }.size() > 0) {
-    implementation fileTree(dir: "libs", include: ["*.aar"])
+    implementation fileTree(dir: "libs", include: ["matrix-rust-sdk.aar"])
     implementation "net.java.dev.jna:jna:5.14.0@aar"
     artifacts.add("default", file("matrix-rust-sdk.aar"))
   } else {
-    implementation "org.matrix.rustcomponents:sdk-android:0.2.24"
+    implementation "org.matrix.rustcomponents:sdk-android:0.2.40"
   }
 }
 
