feat: generate the bindings with uniffi-bindgen-react-native

--- a/example/ios/Podfile
+++ b/example/ios/Podfile
@@ -25,6 +25,9 @@ target 'MatrixSdkExample' do
     :app_path => "#{Pod::Config.instance.installation_root}/.."
   )
 
+  # TODO: Remove once the pod has been published
+  pod 'uniffi-bindgen-react-native', :path => '../../node_modules/uniffi-bindgen-react-native'
+
   target 'MatrixSdkExampleTests' do
     inherit! :complete
     # Pods for testing
