--- a/package.json
+++ b/package.json
@@ -26,6 +26,8 @@
     "!**/.*"
   ],
   "scripts": {
+    "generate": "./scripts/generate.sh",
+    "format": "prettier -w '**/*.{ts,tsx}'",
     "example": "yarn workspace react-native-matrix-sdk-example",
     "test": "jest",
     "typecheck": "tsc --noEmit",
@@ -67,12 +69,13 @@
     "eslint-plugin-prettier": "^5.0.1",
     "jest": "^29.7.0",
     "prettier": "^3.0.3",
-    "react": "18.2.0",
-    "react-native": "0.74.2",
-    "react-native-builder-bob": "^0.23.2",
+    "react": "18.3.1",
+    "react-native": "0.75.3",
+    "react-native-builder-bob": "^0.30.2",
     "release-it": "^15.0.0",
     "turbo": "^1.10.7",
-    "typescript": "^5.2.2"
+    "typescript": "^5.2.2",
+    "uniffi-bindgen-react-native": "https://github.com/jhugman/uniffi-bindgen-react-native#4adf6d9190ea2eac852e3be7ee83b0b2271e4b18"
   },
   "resolutions": {
     "@types/react": "^18.2.44"
