fix: switch to SHA since tag checkouts are currently broken

--- a/ubrn.yaml
+++ b/ubrn.yaml
@@ -1,7 +1,7 @@
 ---
 crate:
   repo: https://github.com/matrix-org/matrix-rust-sdk
-  ref: matrix-sdk-ffi/20241008
+  rev: 19b9a73ecc3e31d502dbf0c5850bfdfaddf02afe # matrix-sdk-ffi/20241008
   manifestPath: bindings/matrix-sdk-ffi/Cargo.toml
 android:
   cargoExtras: []
