--- a/android/build.gradle
+++ b/android/build.gradle
@@ -66,8 +66,7 @@ android {
       }
     }
     ndk {
-      // TODO: Remove once we figured out how to build for x86
-      abiFilters "armeabi-v7a", "arm64-v8a"
+      abiFilters "arm64-v8a", "armeabi-v7a"
     }
   }
 
