--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -118,11 +118,11 @@ jobs:
         with:
           targets: aarch64-apple-ios,aarch64-apple-ios-sim
 
-      - name: Fix .xcode.env
+      - name: Write .xcode.env.local
         run: |
           # Work around for https://github.com/facebook/react-native/issues/35657
-          echo "export NODE_BINARY=$(which node)" >> example/ios/.xcode.env
-          cat example/ios/.xcode.env
+          echo "export NODE_BINARY=$(which node)" >> example/ios/.xcode.env.local
+          cat example/ios/.xcode.env.local
 
       - name: Generate
         run: yarn ubrn:clean && yarn ubrn:checkout && yarn ubrn:ios
