feat: switch to scoped package name

--- a/example/app.json
+++ b/example/app.json
@@ -1,4 +1,4 @@
 {
-  "name": "MatrixSdkExample",
-  "displayName": "MatrixSdkExample"
+  "name": "ReactNativeMatrixSdkExample",
+  "displayName": "ReactNativeMatrixSdkExample"
 }
