--- a/android/build.gradle
+++ b/android/build.gradle
@@ -22,11 +22,11 @@ if (isNewArchitectureEnabled()) {
 }
 
 def getExtOrDefault(name) {
-  return rootProject.ext.has(name) ? rootProject.ext.get(name) : project.properties["ReactNativeMatrixSdk_" + name]
+  return rootProject.ext.has(name) ? rootProject.ext.get(name) : project.properties["UnomedReactNativeMatrixSdk_" + name]
 }
 
 def getExtOrIntegerDefault(name) {
-  return rootProject.ext.has(name) ? rootProject.ext.get(name) : (project.properties["ReactNativeMatrixSdk_" + name]).toInteger()
+  return rootProject.ext.has(name) ? rootProject.ext.get(name) : (project.properties["UnomedReactNativeMatrixSdk_" + name]).toInteger()
 }
 
 def supportsNamespace() {
@@ -40,7 +40,7 @@ def supportsNamespace() {
 
 android {
   if (supportsNamespace()) {
-    namespace "com.matrixsdk"
+    namespace "com.unomedmatrixsdk"
 
     sourceSets {
       main {
@@ -122,7 +122,7 @@ dependencies {
 if (isNewArchitectureEnabled()) {
   react {
     jsRootDir = file("../src/")
-    libraryName = "ReactNativeMatrixSdk"
-    codegenJavaPackageName = "com.matrixsdk"
+    libraryName = "UnomedReactNativeMatrixSdk"
+    codegenJavaPackageName = "com.unomedmatrixsdk"
   }
 }
