--- a/example/android/app/build.gradle
+++ b/example/android/app/build.gradle
@@ -77,9 +77,9 @@ android {
     buildToolsVersion rootProject.ext.buildToolsVersion
     compileSdk rootProject.ext.compileSdkVersion
 
-    namespace "com.matrixsdkexample"
+    namespace "com.reactnativematrixsdkexample"
     defaultConfig {
-        applicationId "com.matrixsdkexample"
+        applicationId "com.reactnativematrixsdkexample"
         minSdkVersion rootProject.ext.minSdkVersion
         targetSdkVersion rootProject.ext.targetSdkVersion
         versionCode 1
