--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "react-native-matrix-sdk",
+  "name": "@unomed/react-native-matrix-sdk",
   "version": "0.1.0",
   "description": "Matrix client SDK for React Native",
   "main": "lib/commonjs/index",
@@ -14,6 +14,7 @@
     "ios",
     "cpp",
     "*.podspec",
+    "build",
     "!ios/build",
     "!android/build",
     "!android/gradle",
@@ -26,13 +27,20 @@
     "!**/.*"
   ],
   "scripts": {
-    "ubrn:ios": "ubrn build ios --config ubrn.yaml --and-generate && (cd example/ios && pod install)",
-    "ubrn:android": "ubrn build android --config ubrn.yaml --and-generate",
+    "ubrn:android": "yarn ubrn:android:build --and-generate",
+    "ubrn:android:build": "ubrn build android --config ubrn.yaml",
+    "ubrn:android:build:release": "yarn ubrn:android:build --release",
+    "ubrn:ios": "yarn ubrn:ios:build --and-generate && yarn ubrn:ios:fix-podspec && (cd example/ios && pod install)",
+    "ubrn:ios:build": "ubrn build ios --config ubrn.yaml",
+    "ubrn:ios:build:release": "yarn ubrn:ios:build --release",
+    "ubrn:ios:fix-podspec": "sed 's|@unomed/react-native-matrix-sdk|unomed-react-native-matrix-sdk|' @unomed/react-native-matrix-sdk.podspec | sed 's|\\.\\./||g' > unomed-react-native-matrix-sdk.podspec && rm -r @unomed",
     "ubrn:checkout": "ubrn checkout --config ubrn.yaml",
     "ubrn:clean": "rm -Rf cpp/ android/src/main/java ios/ src/Native* src/generated/ src/index.ts*",
+    "ubrn:generate": "ubrn generate all --config ubrn.yaml build/RnMatrixRustSdk.xcframework/ios-arm64/libmatrix_sdk_ffi.a",
     "generate": "yarn ubrn:clean && yarn ubrn:checkout && yarn ubrn:android && yarn ubrn:ios",
+    "generate:release": "yarn ubrn:clean && yarn ubrn:checkout && yarn ubrn:android:build:release && yarn ubrn:ios:build:release && yarn ubrn:generate && yarn ubrn:ios:fix-podspec && (cd example/ios && pod install)",
     "format": "prettier -w '**/*.{ts,tsx}'",
-    "example": "yarn workspace react-native-matrix-sdk-example",
+    "example": "yarn workspace @unomed/react-native-matrix-sdk-example",
     "typecheck": "tsc --noEmit",
     "lint": "eslint \"**/*.{js,ts,tsx}\"",
     "clean": "del-cli android/build example/android/build example/android/app/build example/ios/build lib",
@@ -73,7 +81,7 @@
     "jest": "^29.7.0",
     "prettier": "^3.0.3",
     "react": "18.3.1",
-    "react-native": "0.75.3",
+    "react-native": "0.75.4",
     "react-native-builder-bob": "^0.30.2",
     "release-it": "^15.0.0",
     "turbo": "^1.10.7",
