feat: update ubrn to c6f21855628db57719cb31fb0a4c5316a6d0c9b7

--- a/android/CMakeLists.txt
+++ b/android/CMakeLists.txt
@@ -51,16 +51,32 @@ cmake_path(
 add_library(my_rust_lib STATIC IMPORTED)
 set_target_properties(my_rust_lib PROPERTIES IMPORTED_LOCATION ${MY_RUST_LIB})
 
+# Add ReactAndroid libraries, being careful to account for different versions.
 find_package(ReactAndroid REQUIRED CONFIG)
-find_package(fbjni REQUIRED CONFIG)
 find_library(LOGCAT log)
 
+# REACTNATIVE_MERGED_SO seems to be only be set in a build.gradle.kt file,
+# which we don't use. Thus falling back to version number sniffing.
+if (ReactAndroid_VERSION_MINOR GREATER_EQUAL 76)
+  set(REACTNATIVE_MERGED_SO true)
+endif()
+
+# https://github.com/react-native-community/discussions-and-proposals/discussions/816
+# This if-then-else can be removed once this library does not support version below 0.76
+if (REACTNATIVE_MERGED_SO)
+  target_link_libraries(unomed-react-native-matrix-sdk ReactAndroid::reactnative)
+else()
+  target_link_libraries(unomed-react-native-matrix-sdk
+    ReactAndroid::turbomodulejsijni
+    ReactAndroid::react_nativemodule_core
+  )
+endif()
+
+find_package(fbjni REQUIRED CONFIG)
 target_link_libraries(
   unomed-react-native-matrix-sdk
   fbjni::fbjni
   ReactAndroid::jsi
-  ReactAndroid::turbomodulejsijni
-  ReactAndroid::react_nativemodule_core
   ${LOGCAT}
   my_rust_lib
 )
