fix: regenerate with crnl in an attempt to fix build errors

--- a/android/gradle.properties
+++ b/android/gradle.properties
@@ -1,5 +1,5 @@
-MatrixSdk_kotlinVersion=1.7.0
-MatrixSdk_minSdkVersion=21
-MatrixSdk_targetSdkVersion=31
-MatrixSdk_compileSdkVersion=31
-MatrixSdk_ndkversion=21.4.7075529
+ReactNativeMatrixSdk_kotlinVersion=1.7.0
+ReactNativeMatrixSdk_minSdkVersion=21
+ReactNativeMatrixSdk_targetSdkVersion=31
+ReactNativeMatrixSdk_compileSdkVersion=31
+ReactNativeMatrixSdk_ndkversion=21.4.7075529
