--- a/example/android/app/build.gradle
+++ b/example/android/app/build.gradle
@@ -77,9 +77,9 @@ android {
     buildToolsVersion rootProject.ext.buildToolsVersion
     compileSdk rootProject.ext.compileSdkVersion
 
-    namespace "com.reactnativematrixsdkexample"
+    namespace "unomed.reactnativematrixsdk.example"
     defaultConfig {
-        applicationId "com.reactnativematrixsdkexample"
+        applicationId "unomed.reactnativematrixsdk.example"
         minSdkVersion rootProject.ext.minSdkVersion
         targetSdkVersion rootProject.ext.targetSdkVersion
         versionCode 1
@@ -116,4 +116,17 @@ dependencies {
     } else {
         implementation jscFlavor
     }
+}
+
+def isNewArchitectureEnabled() {
+  return rootProject.hasProperty("newArchEnabled") && rootProject.getProperty("newArchEnabled") == "true"
+}
+
+if (isNewArchitectureEnabled()) {
+    // Since our library doesn't invoke codegen automatically we need to do it here.
+    tasks.register('invokeLibraryCodegen', Exec) {
+        workingDir "$rootDir/../../"
+        commandLine "npx", "bob", "build", "--target", "codegen"
+    }
+    preBuild.dependsOn invokeLibraryCodegen
 }
