--- a/.github/workflows/android.yml
+++ b/.github/workflows/android.yml
@@ -1,4 +1,4 @@
-name: Build Android
+name: Android
 on:
   push:
     branches:
@@ -8,7 +8,7 @@ on:
       - main
 
 jobs:
-  run:
+  build:
     runs-on: ubuntu-latest
     env:
       TURBO_CACHE_DIR: .turbo/android
