--- a/.github/workflows/ios.yml
+++ b/.github/workflows/ios.yml
@@ -1,4 +1,4 @@
-name: Build iOS
+name: iOS
 on:
   push:
     branches:
@@ -8,7 +8,7 @@ on:
       - main
 
 jobs:
-  run:
+  build:
     runs-on: macos-14
     env:
       TURBO_CACHE_DIR: .turbo/ios
