--- a/.github/workflows/library.yml
+++ b/.github/workflows/library.yml
@@ -1,4 +1,4 @@
-name: Build library
+name: Library
 on:
   push:
     branches:
@@ -8,7 +8,7 @@ on:
       - main
 
 jobs:
-  run:
+  build:
     runs-on: ubuntu-latest
     steps:
       - name: Checkout
