--- a/.github/workflows/library.yml
+++ b/.github/workflows/library.yml
@@ -9,12 +9,13 @@ on:
 
 jobs:
   build:
+    name: build 📦
     runs-on: ubuntu-latest
     steps:
       - name: Checkout
         uses: actions/checkout@v4
 
-      - name: Setup
+      - name: Setup JS
         uses: ./.github/actions/setup
 
       - name: Build package
