--- a/.github/workflows/library.yml
+++ b/.github/workflows/library.yml
@@ -9,13 +9,12 @@ on:
 
 jobs:
   build:
-    name: build 📦
     runs-on: ubuntu-latest
     steps:
       - name: Checkout
         uses: actions/checkout@v4
 
-      - name: Setup JS
+      - name: Setup
         uses: ./.github/actions/setup
 
       - name: Build package
