--- a/.github/workflows/lint.yml
+++ b/.github/workflows/lint.yml
@@ -8,14 +8,13 @@ on:
       - main
 
 jobs:
-  all:
-    name: all 🔍
+  run:
     runs-on: ubuntu-latest
     steps:
       - name: Checkout
         uses: actions/checkout@v4
 
-      - name: Setup JS
+      - name: Setup
         uses: ./.github/actions/setup
 
       - name: Lint files
