--- a/.github/workflows/ios.yml
+++ b/.github/workflows/ios.yml
@@ -38,44 +38,44 @@ jobs:
           # Free up space for subsequent steps
           rm -rf rust_modules
 
-      # - name: Cache turborepo for iOS
-      #   uses: actions/cache@v4
-      #   with:
-      #     path: ${{ env.TURBO_CACHE_DIR }}
-      #     key: ${{ runner.os }}-turborepo-ios-${{ hashFiles('yarn.lock') }}
-      #     restore-keys: |
-      #       ${{ runner.os }}-turborepo-ios-
+      - name: Cache turborepo for iOS
+        uses: actions/cache@v4
+        with:
+          path: ${{ env.TURBO_CACHE_DIR }}
+          key: ${{ runner.os }}-turborepo-ios-${{ hashFiles('yarn.lock') }}
+          restore-keys: |
+            ${{ runner.os }}-turborepo-ios-
 
-      # - name: Check turborepo cache for iOS
-      #   run: |
-      #     TURBO_CACHE_STATUS=$(node -p "($(yarn turbo run build:ios --cache-dir="${{ env.TURBO_CACHE_DIR }}" --dry=json)).tasks.find(t => t.task === 'build:ios').cache.status")
+      - name: Check turborepo cache for iOS
+        run: |
+          TURBO_CACHE_STATUS=$(node -p "($(yarn turbo run build:ios --cache-dir="${{ env.TURBO_CACHE_DIR }}" --dry=json)).tasks.find(t => t.task === 'build:ios').cache.status")
 
-      #     if [[ $TURBO_CACHE_STATUS == "HIT" ]]; then
-      #       echo "turbo_cache_hit=1" >> $GITHUB_ENV
-      #     fi
+          if [[ $TURBO_CACHE_STATUS == "HIT" ]]; then
+            echo "turbo_cache_hit=1" >> $GITHUB_ENV
+          fi
 
-      # - name: Cache cocoapods
-      #   if: env.turbo_cache_hit != 1
-      #   id: cocoapods-cache
-      #   uses: actions/cache@v4
-      #   with:
-      #     path: |
-      #       **/ios/Pods
-      #     key: ${{ runner.os }}-cocoapods-${{ hashFiles('example/ios/Podfile.lock') }}
-      #     restore-keys: |
-      #       ${{ runner.os }}-cocoapods-
+      - name: Cache cocoapods
+        if: env.turbo_cache_hit != 1
+        id: cocoapods-cache
+        uses: actions/cache@v4
+        with:
+          path: |
+            **/ios/Pods
+          key: ${{ runner.os }}-cocoapods-${{ hashFiles('example/ios/Podfile.lock') }}
+          restore-keys: |
+            ${{ runner.os }}-cocoapods-
 
-      # - name: Install cocoapods
-      #   if: env.turbo_cache_hit != 1 && steps.cocoapods-cache.outputs.cache-hit != 'true'
-      #   run: |
-      #     cd example/ios
+      - name: Install cocoapods
+        if: env.turbo_cache_hit != 1 && steps.cocoapods-cache.outputs.cache-hit != 'true'
+        run: |
+          cd example/ios
 
-      #     # Work around '[!] CocoaPods could not find compatible versions for pod "hermes-engine"'
-      #     pod update hermes-engine --no-repo-update
+          # Work around '[!] CocoaPods could not find compatible versions for pod "hermes-engine"'
+          pod update hermes-engine --no-repo-update
 
-      #     pod install
-      #   env:
-      #     NO_FLIPPER: 1
+          pod install
+        env:
+          NO_FLIPPER: 1
 
       - name: Build example for iOS
         run: |
