--- a/package.json
+++ b/package.json
@@ -96,7 +96,7 @@
     "release-it": "^15.0.0",
     "turbo": "^1.10.7",
     "typescript": "^5.2.2",
-    "uniffi-bindgen-react-native": "https://github.com/jhugman/uniffi-bindgen-react-native#c6f21855628db57719cb31fb0a4c5316a6d0c9b7"
+    "uniffi-bindgen-react-native": "^0.28.3-1"
   },
   "resolutions": {
     "@types/react": "^18.2.44"
@@ -201,7 +201,7 @@
     "jsSrcsDir": "src",
     "outputDir": {
       "ios": "ios/generated",
-      "android": "android/generated"
+      "android": "android/build/generated/source/codegen"
     },
     "android": {
       "javaPackageName": "com.unomed.reactnativematrixsdk"
