--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "cpp",
     "*.podspec",
     "build",
+    "react-native.config.js",
     "!ios/build",
     "!android/build",
     "!android/gradle",
