added export CARGO_FEATURE_NO_NEON=1 to  ios.yml

--- a/.github/workflows/ios.yml
+++ b/.github/workflows/ios.yml
@@ -33,6 +33,7 @@ jobs:
 
       - name: Generate
         run: |
+          export CARGO_FEATURE_NO_NEON=1
           yarn ubrn:clean
           yarn ubrn:checkout
           yarn ubrn:ios
