--- a/android/build.gradle
+++ b/android/build.gradle
@@ -111,8 +111,8 @@ android {
     main {
       if (isNewArchitectureEnabled()) {
           java.srcDirs += [
-            "build/generated/source/codegen/java",
-            "build/generated/source/codegen/jni"
+            "generated/java",
+            "generated/jni"
           ]
       }
     }
