fix: enable x86 for iOS and stop excluding x86 args on both platforms

--- a/ubrn.yaml
+++ b/ubrn.yaml
@@ -18,6 +18,7 @@ ios:
   targets:
     - aarch64-apple-ios
     - aarch64-apple-ios-sim
+    - x86_64-apple-ios
   xcodebuildExtras: []
   frameworkName: build/RnMatrixRustSdk
 noOverwrite: []
