--- a/example/android/gradle.properties
+++ b/example/android/gradle.properties
@@ -25,8 +25,7 @@ android.useAndroidX=true
 # Use this property to specify which architecture you want to build.
 # You can also override it from the CLI using
 # ./gradlew <task> -PreactNativeArchitectures=x86_64
-# TODO: Add back x86 and x86_64 once we figured out how to build them
-reactNativeArchitectures=armeabi-v7a,arm64-v8a
+reactNativeArchitectures=armeabi-v7a,arm64-v8a,x86,x86_64
 
 # Use this property to enable support to the new architecture.
 # This will allow you to use TurboModules and the Fabric render in
