--- a/.github/workflows/ios.yml
+++ b/.github/workflows/ios.yml
@@ -38,7 +38,7 @@ jobs:
           export CARGO_FEATURE_NO_NEON=1
           yarn ubrn:clean
           yarn ubrn:checkout
-          yarn ubrn:ios
+          yarn ubrn:ios || find rust_modules -name "*.a" -exec echo -e '\n{}' \; -exec file "{}" \; -exec lipo -info "{}" \;
           # Free up space for subsequent steps
           rm -rf rust_modules
 
