fix: use arm64 library for generating

--- a/.github/workflows/android.yml
+++ b/.github/workflows/android.yml
@@ -30,9 +30,7 @@ jobs:
 
       - name: Generate
         run: |
-          yarn ubrn:clean
-          yarn ubrn:checkout
-          yarn ubrn:android
+          yarn generate:android
           # Free up space for subsequent steps
           rm -rf rust_modules
 
